# faculty_fetcher

./: .env.example  README.md  db.py  main.py  pyproject.toml
migrations/: 001_init.sql
scripts/: migrate.py
writer/: __init__.py  constants.py  faculty_scraper.py  gui.py  utils.py
