[project]
name = "faculty-fetcher"
version = "0.1.0"
description = "This program scrapes the faculty list and saves them in a database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.2",
    "psycopg>=3.3.2",
    "pyqt6>=6.10.2",
    "python-dotenv>=1.2.1",
    "selenium>=4.40.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
]
